# CPU-Sheduler-CMake

./: CMakeLists.txt  main.cpp
libs/Data_Structures/: CMakeLists.txt
libs/Data_Structures/Vector/: Vector.h
libs/helpers/: CMakeLists.txt
src/Process/: stdafx.h
src/gui/: stdafx.h
src/processors/EDF/: stdafx.h
src/processors/FCFS/: stdafx.h
src/processors/SJF/: stdafx.h
src/scheduler/: scheduler.cpp  stdafx.h
src/wrapper/: stdafx.h
